More than Integer.MAX_VALUE hits, HitsInternal interface (#274)
* Use long instead of int where necessary.
* Upgrade fastutil. Use IntBigArrayBigList in HitsArrays.
* Convert HitProperty.get() and .compare() to long.
* Allow more than 2^31 hits in Contexts.
* Convert ResultsList and subclasses for >2^31 results.
* Introduce HitsInternal interface.
* Synchronize DocValues cachers. Default missing values.
* Don't use requested windowsize for HitsInternal.create, use actual size.
* Set maxhits to Long.MAX_VALUE.